--- a/page/process/table.css
+++ b/page/process/table.css
@@ -11,30 +11,35 @@
   padding: 12px 5px;
   text-align: left;
 }
+/* .fixed_headers td:nth-child(0),
+.fixed_headers th:nth-child(0) {
+  min-width: 5%;
+} */
 .fixed_headers td:nth-child(1),
 .fixed_headers th:nth-child(1) {
-  min-width: 140px;
+  width: 25vw;
 }
 .fixed_headers td:nth-child(2),
 .fixed_headers th:nth-child(2) {
-  min-width: 360px;
+  width: 10vw;
 }
 .fixed_headers td:nth-child(3),
 .fixed_headers th:nth-child(3) {
-  width: 100px;
+  width: 20vw;
 }
 .fixed_headers td:nth-child(4),
 .fixed_headers th:nth-child(4) {
-  width: 100px;
+  width: 30vw;
 }
 .fixed_headers td:nth-child(5),
 .fixed_headers th:nth-child(5) {
-  width: 50px;
+  width: 20vw;
 }
-.fixed_headers td:nth-child(6),
+
+/* .fixed_headers td:nth-child(6),
 .fixed_headers th:nth-child(6) {
-  width: 310px;
-}
+  width: 200px;
+} */
 
 .fixed_headers thead {
   background-color: #333;
@@ -49,7 +54,7 @@
   overflow: auto;
   width: 100%;
   min-height: 150px;
-  max-height: 250px;
+  max-height: 35vh;
 }
 .fixed_headers tbody tr:nth-child(even) {
   background-color: #ddd;
