--- a/page/process/index.css
+++ b/page/process/index.css
@@ -7,8 +7,9 @@ body {
 }
 header {
   /* width: 100%; */
+  height: 50px;
   padding: 0 20px;
-  margin-bottom: 40px;
+  /* padding-bottom: 40px; */
 }
 header img {
   width: 200px;
@@ -16,9 +17,10 @@ header img {
 
 .title {
   width: 100%;
+  height: 130px;
+  line-height: 130px;
   text-align: center;
   font-size: 50px;
-  margin-bottom: 80px;
 }
 
 .nav {
@@ -157,7 +159,12 @@ header img {
   color: #c2c2c2;
 }
 
+.row {
+  height: 250px;
+}
+
 .tab-content {
+  height: 100vh - 250px - 130px - 50px;
   min-width: 60%;
   max-width: 80%;
   margin: 0 auto;
@@ -313,5 +320,5 @@ header img {
     margin: 0 20px;
     z-index: 3;
     transition: 0.3s;
-}
+  }
 }
