--- a/page/process/table.css
+++ b/page/process/table.css
@@ -1,3 +1,11 @@
+.nilm_table_desc {
+  background: #e8e8e8;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: right;
+  font-size: 14px;
+}
 .fixed_headers {
   width: 100%;
   table-layout: fixed;
